# yoforex-ai-frontend-replit

./: .eslintrc.json  .gitignore  .gitmodules  .replit  .vercelignore  CLEANUP_SUMMARY.md  CNAME  index.html  package-lock.json  package.json  pyproject.toml  replit.md  setup.md  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
.git_disabled/: COMMIT_EDITMSG  index
backend/: requirements.txt
backend/app/: main.py
docs/: API_INTEGRATION.md  CHANGELOG.md  DASHBOARD_API_SPEC.md  FAQ.md  TROUBLESHOOTING.md
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/components/: AIMultiPanel.tsx  AIMultiResults.tsx  ActivePositions.tsx  AnalysisDisplay.tsx  HelpSupport.tsx  Journal.tsx  LivePriceTracker.tsx  LiveSignals.tsx  MarketOverview.tsx  MarketSelection.tsx  PortfolioStatCard.tsx  ProtectedRoute.tsx  RecentAISignals.tsx  StrategyItem.tsx  StrategySelection.tsx  TradeConfirmationDialog.tsx  TradeExecution.tsx  TradingChart.tsx  TradingTips.tsx
src/config/: api.ts  company.ts
src/context/: ActiveTradesContext.tsx
src/data/: countries.ts
src/hooks/: use-toast.ts  useAuth.tsx  useBillingSummary.ts  useTheme.tsx
src/lib/: billingEvents.ts  cloudinary.ts  queryClient.ts
src/pages/: About.tsx  ActiveTrades.tsx  Auth.tsx  Billing.tsx  BillingFailure.tsx  BillingSuccess.tsx  Contact.tsx  Dashboard.tsx  Forum.tsx  ForumNewPost.tsx  ForumPostDetail.tsx  Help.tsx  History.tsx  Legal.tsx  NotFound.tsx  (+8 more)
yoforex-ai-frontend-replit/: .eslintrc.json  .gitignore  .replit  README.md  index.html  package.json  tsconfig.node.json  vite-env.d.ts  vite.config.ts
(+96 files in other folders)
