[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.18.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi==0.109.0",
    "google-generativeai==0.3.2",
    "httpx==0.26.0",
    "openai==1.10.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "requests==2.31.0",
    "uvicorn[standard]==0.27.0",
]
